--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <table id="table" class="table">
         <thead>
             <tr>
-                    <th data-field="quoteText">QUOTE</th>
+                    <th data-field="quoteText">QUOTES</th>
                 <th data-field="quoteAuthor">AUTHOR</th>
+               
+        
             </tr>
         </thead>
     </table>
